Настроил общие стили

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/normalize.css/normalize.css";
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
