Изменил общие стили

--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -1,7 +1,9 @@
 $color-primary:#78dbe2;
 $color-secondary:#C6F1E7;
-$color-background:#F0FFF3;
-$another-color:#FA4659;
+//$color-background:#F0FFF3;
+$color-background:white;
+$color-another:#FA4659;
+
 
 $font-primary: Helvetica;
 $font-secondary: Arial;
