Добавил иконку в Profile и перенастроил роутинг в header

--- a/src/app/components/main-header/main-header.component.html
+++ b/src/app/components/main-header/main-header.component.html
@@ -1,9 +1,10 @@
 <header class="main-header">
     <nav class="main-header__nav nav-panel">
         <h2 class="nav-panel__title">FreeTeme</h2>
-        <app-link text="Home"/>
-        <app-link text="Deals"/>
-        <app-link text="About"/>
+        <app-link text="Home" routerLink="/home"/>
+        <app-link text="Deals" routerLink="/deals"/>
+        <app-link text="Executors" routerLink="/executors"/>
+        <app-link text="About" routerLink="/about"/>
         <div class="nav-panel__profile">
             <app-profile></app-profile>
         </div>
