--- a/src/app/pages/authorization-page/authorization-page.component.scss
+++ b/src/app/pages/authorization-page/authorization-page.component.scss
@@ -2,7 +2,14 @@
     &__wrapper {
         height: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    &__btn-switch {
+        position: relative;
+        top: 20px;
+        left: 0px;
     }
 }
