Добавил карточки Заказов

--- a/src/app/pages/deals-page/deals-page.component.html
+++ b/src/app/pages/deals-page/deals-page.component.html
@@ -1,1 +1,20 @@
-<p>deals-page works!</p>
+<div class="deals-page__wrapper">
+    <div class="deals-page__sidebar">
+        <h4>Search</h4>
+        <input type="text">
+
+        <h4>Filter</h4>
+        <label>Criteria 1</label>
+        <input type="checkbox"> 
+        <br>
+        <label>Criteria 2</label>
+        <input type="checkbox">
+    </div>
+    <div class="deals-page__content">
+        <app-deal-card></app-deal-card>
+        <app-deal-card></app-deal-card>
+        <app-deal-card></app-deal-card>
+        <app-deal-card></app-deal-card>
+        <app-deal-card></app-deal-card>
+    </div>
+</div>
