--- a/src/app/pages/authorization-page/authorization-page.component.scss
+++ b/src/app/pages/authorization-page/authorization-page.component.scss
@@ -1,6 +1,8 @@
 .authorization-page {
+
     &__wrapper {
         height: 100%;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         justify-content: center;
