--- a/src/app/components/main-footer/main-footer.component.scss
+++ b/src/app/components/main-footer/main-footer.component.scss
@@ -6,4 +6,48 @@
         background-color: $color-primary;
         padding: 20px 50px;
     }
+
+    &__title {
+        
+    }
+
+    &__content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 20px;
+    }
+
+    &__column {
+
+
+
+        &-title {
+            font-size: $font-size-2;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        &-text {
+            display: block;
+        }
+    }
+
+    &__end {
+
+        display: flex;
+        flex-direction: row;
+
+        &-text {
+            align-self: end;
+        }
+
+        &-links {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+            justify-content: right;
+            align-items: center;
+            gap: 20px;
+        }
+    }
 }
