--- a/src/app/components/deal-card/deal-card.component.html
+++ b/src/app/components/deal-card/deal-card.component.html
@@ -1,17 +1,16 @@
 <div class="deal-card__wrapper">
-    <div class="deal-card_tags">Tags</div>
+    <div class="deal-card_tags">{{dealCard?.categories}}</div>
     <div class="deal-card__head">
-        <div class="deal-card__title">Create site</div>
-        <div class="deal-card__price"><span class="deal-card__price-text">Price : </span>1000-1200</div>
+        <div class="deal-card__title">{{dealCard?.title}}</div>
+        <div class="deal-card__price"><span class="deal-card__price-text">Price : </span>{{dealCard?.minPrice}}-{{dealCard?.maxPrice}}</div>
     </div>
-    <div class="deal-card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates impedit ea nesciunt nostrum voluptas? Culpa tempore aperiam est consequatur corrupti impedit. Repellendus, earum? Quod quo ratione doloremque ipsa provident expedita, corporis qui sunt eaque voluptates est similique sint nam hic nemo eligendi doloribus eos illo, minus aliquam, voluptatum vitae totam.</div>
+    <div class="deal-card__description">{{dealCard?.description}}</div>
     <div class="deal-card__employer">
-        Tom
-        5 start
+        {{dealCard?.creatorUserId}}
     </div>
     <div class="deal-card__footer">
-        <div class="deal-card__date">02.02.2050 16:00:00</div>
-        <div class="deal-card__watch">123</div>
-        <div class="deal-card__like">10</div>
+        <div class="deal-card__date">{{dealCard?.datePublication}}</div>
+        <div class="deal-card__watch">Likes : 100</div>
+        <div class="deal-card__like">Watch : 10000</div>
     </div>
 </div>
