Добавил обработку disable в PrimaryButtom

--- a/src/app/components/UI/button/primary-button/primary-button.component.scss
+++ b/src/app/components/UI/button/primary-button/primary-button.component.scss
@@ -17,3 +17,14 @@
         color: $color-primary;
     }
 }
+
+.disabled {
+    background-color: $color-secondary;
+
+    &:hover {
+       
+    }
+    &:active {
+        color: black;
+    }
+}
