--- a/src/app/components/UI/button/primary-button/primary-button.component.html
+++ b/src/app/components/UI/button/primary-button/primary-button.component.html
@@ -1,4 +1,4 @@
-<button class="primary-button"
+<button [class.disabled]="disabled" class="primary-button"
     [type]="type" 
     [name]="name" 
     [id]="id"
