Добавил страницу Profile и CardProfileComponent
* Внедрил роутинг на страницу Профиль в main-header

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,1 +1,11 @@
-<p>profile-page works!</p>
+<div class="profile-page__wrapper">
+    <app-profile-card
+        login="Artem"
+        email="pCwJG@example.com"
+    >
+
+    </app-profile-card>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div>
