--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -4,6 +4,8 @@ $color-secondary:#C6F1E7;
 $color-background:white;
 $color-another:#FA4659;
 
+$font-font-primary: black;
+$font-color-secondary: rgb(121, 121, 121);
 
 $font-primary: Helvetica;
 $font-secondary: Arial;
