--- a/src/app/components/form/deal-create-form/deal-create-form.component.html
+++ b/src/app/components/form/deal-create-form/deal-create-form.component.html
@@ -137,7 +137,7 @@
                     Min length is 3 symbols
                 </p>
             </app-form-input>
-            <input type="date">
+            <input type="date" formControlName="date">
         </div>
     <app-primary-button [text]="'Create'" type="submit" [disabled]="dealCreateForm.invalid"></app-primary-button>
 </form>
