--- a/src/app/components/deal-card/deal-card.component.scss
+++ b/src/app/components/deal-card/deal-card.component.scss
@@ -50,4 +50,14 @@
         flex-direction: row;
         justify-content: space-between;
     }
+
+    &__view {
+        padding: 5px;
+        display: flex;
+        justify-content: right;
+
+        &-button {
+            padding: 5px 30px;
+        }
+    }   
 }
