Разработал профиль пользователя
* Карточка пользователя
* Информация о пользователе (Профиль)
* Изменение Профиля

--- a/src/app/components/UI/input/form-input/form-input.component.scss
+++ b/src/app/components/UI/input/form-input/form-input.component.scss
@@ -14,7 +14,7 @@
 
     &__input {
         width: 300px;
-        padding: 5px 15px;
+        padding: 0.5rem 1rem;
         border: 2px solid $color-primary;
         border-radius: 1rem;
 
