--- a/src/app/components/form/registration-form/registration-form.component.html
+++ b/src/app/components/form/registration-form/registration-form.component.html
@@ -1,4 +1,9 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()" method="post" class="registration-form__wrapper">
+<form 
+    [formGroup]="registerForm" 
+    (ngSubmit)="onSubmit()" 
+    method="post" 
+    class="registration-form__wrapper"
+>
     <h2 class="login-form__title">Registration</h2>
     
     <p class="registration-form__description">Pleace, enter your login and password!</p>
