--- a/src/app/components/profile-card/profile-card.component.html
+++ b/src/app/components/profile-card/profile-card.component.html
@@ -1,5 +1,7 @@
 <div class="profile-card__wrapper">
-    <div class="profile-card__image">{{image}}</div>
+    <ng-content #image class="profile-card__image">
+
+    </ng-content>
     <div class="profile-card__login">{{login}}</div>
     <div class="profile-card__email">{{email}}</div>
 </div>
