--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<p>home-page works!</p>
+<div style="max-width: 400px;">
+    <app-user-card/>
+    <app-profile-edit-form></app-profile-edit-form>
+</div>
