--- a/src/shared/variables.scss
+++ b/src/shared/variables.scss
@@ -13,3 +13,5 @@ $font-secondary: Arial;
 $font-size-1: 1.5rem;
 $font-size-2: 1.2rem;
 $font-size-3: 1rem;
+
+// $hakaton_angular-primary : #78dbe2;
