Добавил в профиль карточку Пользователя и изменение профиля

--- a/src/app/components/form/profile-edit-form/profile-edit-form.component.html
+++ b/src/app/components/form/profile-edit-form/profile-edit-form.component.html
@@ -104,6 +104,11 @@
     </p>
     </app-form-input>
 
+    <app-category-input 
+        (toggleSelectionEvent)="toggleCategory($event)"
+        [selectedCategories]="selectedCategories"
+    ></app-category-input>
+
     <div>
         <button 
             mat-raised-button 
