Изменение тэгов пользователя

--- a/src/app/components/form/profile-edit-form/profile-edit-form.component.html
+++ b/src/app/components/form/profile-edit-form/profile-edit-form.component.html
@@ -106,7 +106,7 @@
 
     <app-category-input 
         (toggleSelectionEvent)="toggleCategory($event)"
-        [selectedCategories]="selectedCategories"
+        [alreadySelectedCategories]="selectedCategories"
     ></app-category-input>
 
     <div>
