--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -17,7 +17,20 @@
       </div>
       <ng-container *ngIf="!isEditProfile">
         <div class="profile-page__content-fields" *ngFor="let field of profileKeyValues">
-          <app-profile-field label="{{field[0]}}" value="{{field[1]}}"></app-profile-field>
+          @if (field[0] == 'categories') 
+          {
+            <mat-chip-listbox >  
+                <mat-chip-option 
+                    *ngFor="let category of field[1]"
+                    selectable="false" 
+                >
+                    {{category.name}}
+                </mat-chip-option>
+            </mat-chip-listbox>
+          }
+          @else {
+            <app-profile-field label="{{field[0]}}" value="{{field[1]}}"></app-profile-field>
+          }
         </div>
         <button 
           class="profile-page__content-edit" 
@@ -31,6 +44,11 @@
         <app-profile-edit-form [profile]="profile" (setIsEditProfile)="onProfileEdit($event)"></app-profile-edit-form>
       </ng-container>
     </div>
-    <div>3</div>
-    <div>4</div>
+    <div>
+      3
+    </div>
+    <div class="profile-page__panels">
+      <app-proposal-panel></app-proposal-panel>
+      <app-deal-panel></app-deal-panel>
+    </div>
 </div>
