--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-
+<!-- Не забывай, что по БЭМу, элемент не может быть без блока.
+можешь добавить класс в AppComponent в декоратор через свойства host, чтобы хотя бы номинально элементы были в блоке-->
 <div class="app__wrapper">
   <app-main-header></app-main-header>
-  
+
   <main class="app__content">
     <router-outlet></router-outlet>
   </main>
-  
-  <app-main-footer></app-main-footer>  
+
+  <app-main-footer></app-main-footer>
 </div>
