--- a/src/app/components/profile-field/profile-field.component.html
+++ b/src/app/components/profile-field/profile-field.component.html
@@ -1,4 +1,4 @@
-
+<!-- Идея правильная - разбить всё на маленькие компоненты и с ними работать-->
 <div class="profile-field__wrapper">
     <div class="profile-field__label">{{label}}</div>
     <div class="profile-field__content">{{value}}</div>
