Добавил Количество просмотров

--- a/src/app/components/cards/deal-card/deal-card.component.html
+++ b/src/app/components/cards/deal-card/deal-card.component.html
@@ -16,7 +16,7 @@
     <div class="deal-card__footer">
         <div class="deal-card__date">{{dealCard?.datePublication}}</div>
         <div class="deal-card__watch">Likes : 100</div>
-        <div class="deal-card__like">Watch : 10000</div>
+        <div class="deal-card__like">Watch : {{dealCard?.views}}</div>
         <button 
             mat-raised-button 
             class="deal-card__view-button" 
